# pdf_proc

./: .gitignore  README.md  apprunner.yaml  compose.yml  dev-requirements.txt  dockerfile  invoice_data_extractor.py  invoice_data_extractor_assistant.py  main.py  pdf_renamer.py  pyproject.toml  requirements.txt  tesseract.py
.github/workflows/: django.yml
api/: end_points.http
